--- a/tej-frontend/components/navbar.css
+++ b/tej-frontend/components/navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navbar-dark .navbar-brand {
-  color: #ffb347; /* Orange/golden branding */
+  color: #ca2f2f; /* Orange/golden branding */
   font-size: 1.5rem;
   font-weight: 700;
   letter-spacing: 0.7px;
@@ -28,9 +28,9 @@
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link:focus {
-  background-color: #ffb347;
+  background-color: #d3735b;
   color: #1e1e2f;
-  box-shadow: 0 0 8px #ffb347a0;
+  box-shadow: 0 0 8px #b16c6ca0;
   text-decoration: none;
 }
 
